<?xml version="1.0"?>
<package format="2">
  <name>firos2</name>
  <version>0.0.0</version>
  <description>Package containing tools for creating bridges between ROS2 and Fast RTPS enviroments</description>
  <maintainer email="javierisabel@eprosima.com">Javier Isabel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>fastcdr</build_depend>
  <build_depend>fastrtps</build_depend>
  <build_depend>rosidl_generator_dds_idl</build_depend>

  <exec_depend>fastcdr</exec_depend>
  <exec_depend>fastrtps</exec_depend>

  <test_depend>rclcpp</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
